# agent-relay

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NIP-DRAFT.md  PROPOSAL.md  README.md  ROADMAP.md  SKILL.md  docker-compose.yml
.github/workflows/: ci.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
crates/agent-discovery/: Cargo.toml
crates/agent-discovery/src/: error.rs  heartbeat.rs  lib.rs  relay.rs  service_card.rs  wasm.rs
docs/: AGENT-PERSPECTIVE.md  ARCHITECTURE.md  DISCUSSION.md  GOALS.md  HANDSHAKE.md  QUICKSTART.md
mcp/: Cargo.toml  README.md
mcp/src/: main.rs
openclaw/: INSTALL.md  README.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
openclaw/src/: dm-listener.ts  globals.d.ts  index.ts  service.ts
server/: Cargo.toml  README.md
server/src/: error.rs  handlers.rs  main.rs  registry.rs  types.rs
src/: cli.rs  handlers.rs  main.rs
web/: index.html  package-lock.json  package.json
web/public/: INSTALL.md  SKILL.md  font-test.html
web/src/: deep-sea.ts  main.ts  nostr.ts  styles.css  types.ts
