[workspace]
resolver = "2"
members = [
    "cli",
    "crates/agent-reach",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/AustinEral/agent-reach"

[workspace.dependencies]
nostr = "0.37"
nostr-sdk = "0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
wasm-bindgen = "0.2"
