[package]
name = "agent-reach-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI client for agent-reach registry"

[[bin]]
name = "agent-reach"
path = "src/main.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto / identity
agent-id = "0.1"
agent-id-handshake = "0.1"

# Utilities
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
directories = "5"
hex = "0.4"
urlencoding = "2"
