[package]
name = "agent-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for agent service discovery on Nostr"

[[bin]]
name = "agent-bridge"
path = "src/main.rs"

[dependencies]
agent-reach = { path = "../crates/agent-reach", features = ["relay"] }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nostr = "0.37"
nostr-sdk = "0.37"
anyhow = "1"
