[package]
name = "agent-reach-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server for agent-reach discovery registry"

[[bin]]
name = "agent-reach-mcp"
path = "src/main.rs"

[dependencies]
# MCP SDK
rmcp = { version = "0.1", features = ["server", "transport-io"] }

# Identity & handshake
agent-id = "0.1"
agent-id-handshake = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
urlencoding = "2"
base64 = "0.22"
