[package]
name = "agent-reach-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DID-based discovery registry server for AI agents"

[[bin]]
name = "agent-reach-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto / identity
agent-id = "0.1"
agent-id-handshake = "0.1"

# Utilities
anyhow = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "v7"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
