[package]
name = "agent-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent service discovery for Nostr"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
relay = ["nostr-sdk"]

[dependencies]
nostr = "0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Optional: relay support
nostr-sdk = { version = "0.37", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
